# diverge

./: CLAUDE.md  RESEARCH.md  pyproject.toml
src/diverge/: __init__.py  adapters.py  cli.py  core.py  diff.py  match.py  perturb.py  search.py
src/diverge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_core.py  test_diff.py  test_match.py  test_perturb.py  test_search.py
